# wg-finder

./: .env  .gitignore  README.md  pyproject.toml
tests/: test_chatgpt.py  test_messenger.py  test_scraper.py  test_wgfinder.py
wgfinder/: chatgpt.py  main.py  messaging.py  messenger.py  models.py  scraper.py  util.py
wgfinder/config/: logging.ini
wgfinder/templates/: creative_response_prompt.txt  mail.html  mail_template.html  message.txt  response_prompt.txt  summarize_prompt.txt  system_prompt.txt
