[tool.poetry]
name = "wgfinder"
version = "0.2"
description = ""
authors = ["Yannik Queisler <dev.yannik.queisler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
requests = "^2.31.0"
openai = "^0.28.0"
pywhatkit = "5.3"
Flask = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
