[tool.poetry]
name = "wgfinder"
version = "0.2"
description = ""
authors = ["Yannik Queisler <dev.yannik.queisler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
requests = "^2.31.0"
openai = "^1.7.2"
pywhatkit = "5.3"
Flask = "^3.0.0"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
